name:                 Haddock
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               simon.bourne
maintainer:           simonbourne@enhedron.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  exposed-modules:      Haddock
  default-language:     Haskell2010
